Project/myparser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BEGIN
    END
    MIL
    MIN
    SEG
    SHAPEC
    SHAPEF
    STEP

Grammar

Rule 0     S' -> statements
Rule 1     statements -> empty
Rule 2     statements -> print
Rule 3     statements -> primitive
Rule 4     statements -> statement
Rule 5     statements -> statements statement
Rule 6     statement -> expression PYC
Rule 7     statement -> callable PYC
Rule 8     statement -> var_assign
Rule 9     statement -> funcionreservada
Rule 10    statement -> procedure
Rule 11    primitive -> BOOLEAN
Rule 12    primitive -> INT
Rule 13    primitive -> list
Rule 14    primitive -> STRING
Rule 15    print -> PUNTO
Rule 16    ids -> ID
Rule 17    ids -> ids COMA ids
Rule 18    params -> input
Rule 19    input -> empty
Rule 20    input -> expression
Rule 21    input -> primitive
Rule 22    input -> sublist
Rule 23    input -> input COMA input
Rule 24    var_assign -> ID IGUAL expression PYC
Rule 25    var_assign -> ID IGUAL primitive PYC
Rule 26    var_assign -> ids IGUAL params PYC
Rule 27    var_assign -> sublist IGUAL params PYC
Rule 28    statement -> TYPE PARENTESISIZQ ID PARENTESISDER PYC
Rule 29    list -> CORCHETEIZQ params CORCHETEDER
Rule 30    callable -> sublist
Rule 31    sublist -> ID multi_index
Rule 32    sublist -> ID CORCHETEIZQ expression COMA expression CORCHETEDER
Rule 33    sublist -> ID CORCHETEIZQ DOSPUNTOS COMA expression CORCHETEDER
Rule 34    multi_index -> index
Rule 35    multi_index -> index multi_index
Rule 36    index -> CORCHETEIZQ expression CORCHETEDER
Rule 37    index -> CORCHETEIZQ expression DOSPUNTOS expression CORCHETEDER
Rule 38    var_assign -> ID IGUAL LIST PARENTESISIZQ RANGE PARENTESISIZQ expression COMA params PARENTESISDER PARENTESISDER PYC
Rule 39    statement -> ID PUNTO INSERT PARENTESISIZQ expression COMA params PARENTESISDER PYC
Rule 40    statement -> ID PUNTO DEL PARENTESISIZQ expression PARENTESISDER PYC
Rule 41    statement -> LEN PARENTESISIZQ ID PARENTESISDER PYC
Rule 42    statement -> LEN PARENTESISIZQ list PARENTESISDER PYC
Rule 43    statement -> sublist PUNTO NEG PYC
Rule 44    statement -> sublist PUNTO T PYC
Rule 45    statement -> sublist PUNTO F PYC
Rule 46    expression -> expression EXPONENTE expression
Rule 47    expression -> expression MODULO expression
Rule 48    expression -> expression MULTIPLICACION expression
Rule 49    expression -> expression DIVISIONENTERA expression
Rule 50    expression -> expression DIVISION expression
Rule 51    expression -> expression SUMA expression
Rule 52    expression -> expression RESTA expression
Rule 53    expression -> PARENTESISIZQ expression PARENTESISDER
Rule 54    expression -> ID
Rule 55    expression -> INT
Rule 56    expression -> RESTA expression
Rule 57    empty -> <empty>
Rule 58    condicion -> expression IGUALES valorIf
Rule 59    condicion -> expression MAYORQUE valorIf
Rule 60    condicion -> expression MENORQUE valorIf
Rule 61    condicion -> expression MENORIGUAL valorIf
Rule 62    condicion -> expression MAYORIGUAL valorIf
Rule 63    valorIf -> BOOLEAN
Rule 64    valorIf -> INT
Rule 65    funcionreservada -> IF PARENTESISIZQ condicion PARENTESISDER LLAVEIZQ ordenes LLAVEDER
Rule 66    procedure -> PROCEDURE ID PARENTESISIZQ params PARENTESISDER LLAVEIZQ ordenes LLAVEDER PYC
Rule 67    procedure -> PROCEDURE MAIN PARENTESISIZQ params PARENTESISDER LLAVEIZQ ordenes LLAVEDER PYC
Rule 68    funcionreservada -> CALL ID PARENTESISIZQ params PARENTESISDER PYC
Rule 69    funcionreservada -> FOR expression IN INT LLAVEIZQ ordenes LLAVEDER
Rule 70    funcionreservada -> FOR expression IN expression LLAVEIZQ ordenes LLAVEDER
Rule 71    ordenes -> statement
Rule 72    ordenes -> ordenes statement
Rule 73    ordenes -> ordenes funcionreservada
Rule 74    ordenes -> funcionreservada
Rule 75    funcionreservada -> BLINK PARENTESISIZQ params PARENTESISDER PYC
Rule 76    funcionreservada -> DELAY PARENTESISIZQ params PARENTESISDER PYC
Rule 77    funcionreservada -> PRINTLED PARENTESISIZQ params PARENTESISDER PYC
Rule 78    funcionreservada -> PRINTLEDX PARENTESISIZQ params PARENTESISDER PYC

Terminals, with rules where they appear

BEGIN                : 
BLINK                : 75
BOOLEAN              : 11 63
CALL                 : 68
COMA                 : 17 23 32 33 38 39
CORCHETEDER          : 29 32 33 36 37
CORCHETEIZQ          : 29 32 33 36 37
DEL                  : 40
DELAY                : 76
DIVISION             : 50
DIVISIONENTERA       : 49
DOSPUNTOS            : 33 37
END                  : 
EXPONENTE            : 46
F                    : 45
FOR                  : 69 70
ID                   : 16 24 25 28 31 32 33 38 39 40 41 54 66 68
IF                   : 65
IGUAL                : 24 25 26 27 38
IGUALES              : 58
IN                   : 69 70
INSERT               : 39
INT                  : 12 55 64 69
LEN                  : 41 42
LIST                 : 38
LLAVEDER             : 65 66 67 69 70
LLAVEIZQ             : 65 66 67 69 70
MAIN                 : 67
MAYORIGUAL           : 62
MAYORQUE             : 59
MENORIGUAL           : 61
MENORQUE             : 60
MIL                  : 
MIN                  : 
MODULO               : 47
MULTIPLICACION       : 48
NEG                  : 43
PARENTESISDER        : 28 38 38 39 40 41 42 53 65 66 67 68 75 76 77 78
PARENTESISIZQ        : 28 38 38 39 40 41 42 53 65 66 67 68 75 76 77 78
PRINTLED             : 77
PRINTLEDX            : 78
PROCEDURE            : 66 67
PUNTO                : 15 39 40 43 44 45
PYC                  : 6 7 24 25 26 27 28 38 39 40 41 42 43 44 45 66 67 68 75 76 77 78
RANGE                : 38
RESTA                : 52 56
SEG                  : 
SHAPEC               : 
SHAPEF               : 
STEP                 : 
STRING               : 14
SUMA                 : 51
T                    : 44
TYPE                 : 28
error                : 

Nonterminals, with rules where they appear

callable             : 7
condicion            : 65
empty                : 1 19
expression           : 6 20 24 32 32 33 36 37 37 38 39 40 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 56 58 59 60 61 62 69 70 70
funcionreservada     : 9 73 74
ids                  : 17 17 26
index                : 34 35
input                : 18 23 23
list                 : 13 42
multi_index          : 31 35
ordenes              : 65 66 67 69 70 72 73
params               : 26 27 29 38 39 66 67 68 75 76 77 78
primitive            : 3 21 25
print                : 2
procedure            : 10
statement            : 4 5 71 72
statements           : 5 0
sublist              : 22 27 30 43 44 45
valorIf              : 58 59 60 61 62
var_assign           : 8

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . empty
    (2) statements -> . print
    (3) statements -> . primitive
    (4) statements -> . statement
    (5) statements -> . statements statement
    (57) empty -> .
    (15) print -> . PUNTO
    (11) primitive -> . BOOLEAN
    (12) primitive -> . INT
    (13) primitive -> . list
    (14) primitive -> . STRING
    (6) statement -> . expression PYC
    (7) statement -> . callable PYC
    (8) statement -> . var_assign
    (9) statement -> . funcionreservada
    (10) statement -> . procedure
    (28) statement -> . TYPE PARENTESISIZQ ID PARENTESISDER PYC
    (39) statement -> . ID PUNTO INSERT PARENTESISIZQ expression COMA params PARENTESISDER PYC
    (40) statement -> . ID PUNTO DEL PARENTESISIZQ expression PARENTESISDER PYC
    (41) statement -> . LEN PARENTESISIZQ ID PARENTESISDER PYC
    (42) statement -> . LEN PARENTESISIZQ list PARENTESISDER PYC
    (43) statement -> . sublist PUNTO NEG PYC
    (44) statement -> . sublist PUNTO T PYC
    (45) statement -> . sublist PUNTO F PYC
    (29) list -> . CORCHETEIZQ params CORCHETEDER
    (46) expression -> . expression EXPONENTE expression
    (47) expression -> . expression MODULO expression
    (48) expression -> . expression MULTIPLICACION expression
    (49) expression -> . expression DIVISIONENTERA expression
    (50) expression -> . expression DIVISION expression
    (51) expression -> . expression SUMA expression
    (52) expression -> . expression RESTA expression
    (53) expression -> . PARENTESISIZQ expression PARENTESISDER
    (54) expression -> . ID
    (55) expression -> . INT
    (56) expression -> . RESTA expression
    (30) callable -> . sublist
    (24) var_assign -> . ID IGUAL expression PYC
    (25) var_assign -> . ID IGUAL primitive PYC
    (26) var_assign -> . ids IGUAL params PYC
    (27) var_assign -> . sublist IGUAL params PYC
    (38) var_assign -> . ID IGUAL LIST PARENTESISIZQ RANGE PARENTESISIZQ expression COMA params PARENTESISDER PARENTESISDER PYC
    (65) funcionreservada -> . IF PARENTESISIZQ condicion PARENTESISDER LLAVEIZQ ordenes LLAVEDER
    (68) funcionreservada -> . CALL ID PARENTESISIZQ params PARENTESISDER PYC
    (69) funcionreservada -> . FOR expression IN INT LLAVEIZQ ordenes LLAVEDER
    (70) funcionreservada -> . FOR expression IN expression LLAVEIZQ ordenes LLAVEDER
    (75) funcionreservada -> . BLINK PARENTESISIZQ params PARENTESISDER PYC
    (76) funcionreservada -> . DELAY PARENTESISIZQ params PARENTESISDER PYC
    (77) funcionreservada -> . PRINTLED PARENTESISIZQ params PARENTESISDER PYC
    (78) funcionreservada -> . PRINTLEDX PARENTESISIZQ params PARENTESISDER PYC
    (66) procedure -> . PROCEDURE ID PARENTESISIZQ params PARENTESISDER LLAVEIZQ ordenes LLAVEDER PYC
    (67) procedure -> . PROCEDURE MAIN PARENTESISIZQ params PARENTESISDER LLAVEIZQ ordenes LLAVEDER PYC
    (31) sublist -> . ID multi_index
    (32) sublist -> . ID CORCHETEIZQ expression COMA expression CORCHETEDER
    (33) sublist -> . ID CORCHETEIZQ DOSPUNTOS COMA expression CORCHETEDER
    (16) ids -> . ID
    (17) ids -> . ids COMA ids

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for TYPE resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for LEN resolved as shift
  ! shift/reduce conflict for PARENTESISIZQ resolved as shift
  ! shift/reduce conflict for RESTA resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for CALL resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for BLINK resolved as shift
  ! shift/reduce conflict for DELAY resolved as shift
  ! shift/reduce conflict for PRINTLED resolved as shift
  ! shift/reduce conflict for PRINTLEDX resolved as shift
  ! shift/reduce conflict for PROCEDURE resolved as shift
    $end            reduce using rule 57 (empty -> .)
    PUNTO           shift and go to state 6
    BOOLEAN         shift and go to state 7
    INT             shift and go to state 8
    STRING          shift and go to state 10
    TYPE            shift and go to state 16
    ID              shift and go to state 18
    LEN             shift and go to state 19
    CORCHETEIZQ     shift and go to state 21
    PARENTESISIZQ   shift and go to state 17
    RESTA           shift and go to state 22
    IF              shift and go to state 24
    CALL            shift and go to state 25
    FOR             shift and go to state 26
    BLINK           shift and go to state 27
    DELAY           shift and go to state 28
    PRINTLED        shift and go to state 29
    PRINTLEDX       shift and go to state 30
    PROCEDURE       shift and go to state 31

  ! TYPE            [ reduce using rule 57 (empty -> .) ]
  ! ID              [ reduce using rule 57 (empty -> .) ]
  ! LEN             [ reduce using rule 57 (empty -> .) ]
  ! PARENTESISIZQ   [ reduce using rule 57 (empty -> .) ]
  ! INT             [ reduce using rule 57 (empty -> .) ]
  ! RESTA           [ reduce using rule 57 (empty -> .) ]
  ! IF              [ reduce using rule 57 (empty -> .) ]
  ! CALL            [ reduce using rule 57 (empty -> .) ]
  ! FOR             [ reduce using rule 57 (empty -> .) ]
  ! BLINK           [ reduce using rule 57 (empty -> .) ]
  ! DELAY           [ reduce using rule 57 (empty -> .) ]
  ! PRINTLED        [ reduce using rule 57 (empty -> .) ]
  ! PRINTLEDX       [ reduce using rule 57 (empty -> .) ]
  ! PROCEDURE       [ reduce using rule 57 (empty -> .) ]

    statements                     shift and go to state 1
    empty                          shift and go to state 2
    print                          shift and go to state 3
    primitive                      shift and go to state 4
    statement                      shift and go to state 5
    list                           shift and go to state 9
    expression                     shift and go to state 11
    callable                       shift and go to state 12
    var_assign                     shift and go to state 13
    funcionreservada               shift and go to state 14
    procedure                      shift and go to state 15
    sublist                        shift and go to state 20
    ids                            shift and go to state 23

state 1

    (0) S' -> statements .
    (5) statements -> statements . statement
    (6) statement -> . expression PYC
    (7) statement -> . callable PYC
    (8) statement -> . var_assign
    (9) statement -> . funcionreservada
    (10) statement -> . procedure
    (28) statement -> . TYPE PARENTESISIZQ ID PARENTESISDER PYC
    (39) statement -> . ID PUNTO INSERT PARENTESISIZQ expression COMA params PARENTESISDER PYC
    (40) statement -> . ID PUNTO DEL PARENTESISIZQ expression PARENTESISDER PYC
    (41) statement -> . LEN PARENTESISIZQ ID PARENTESISDER PYC
    (42) statement -> . LEN PARENTESISIZQ list PARENTESISDER PYC
    (43) statement -> . sublist PUNTO NEG PYC
    (44) statement -> . sublist PUNTO T PYC
    (45) statement -> . sublist PUNTO F PYC
    (46) expression -> . expression EXPONENTE expression
    (47) expression -> . expression MODULO expression
    (48) expression -> . expression MULTIPLICACION expression
    (49) expression -> . expression DIVISIONENTERA expression
    (50) expression -> . expression DIVISION expression
    (51) expression -> . expression SUMA expression
    (52) expression -> . expression RESTA expression
    (53) expression -> . PARENTESISIZQ expression PARENTESISDER
    (54) expression -> . ID
    (55) expression -> . INT
    (56) expression -> . RESTA expression
    (30) callable -> . sublist
    (24) var_assign -> . ID IGUAL expression PYC
    (25) var_assign -> . ID IGUAL primitive PYC
    (26) var_assign -> . ids IGUAL params PYC
    (27) var_assign -> . sublist IGUAL params PYC
    (38) var_assign -> . ID IGUAL LIST PARENTESISIZQ RANGE PARENTESISIZQ expression COMA params PARENTESISDER PARENTESISDER PYC
    (65) funcionreservada -> . IF PARENTESISIZQ condicion PARENTESISDER LLAVEIZQ ordenes LLAVEDER
    (68) funcionreservada -> . CALL ID PARENTESISIZQ params PARENTESISDER PYC
    (69) funcionreservada -> . FOR expression IN INT LLAVEIZQ ordenes LLAVEDER
    (70) funcionreservada -> . FOR expression IN expression LLAVEIZQ ordenes LLAVEDER
    (75) funcionreservada -> . BLINK PARENTESISIZQ params PARENTESISDER PYC
    (76) funcionreservada -> . DELAY PARENTESISIZQ params PARENTESISDER PYC
    (77) funcionreservada -> . PRINTLED PARENTESISIZQ params PARENTESISDER PYC
    (78) funcionreservada -> . PRINTLEDX PARENTESISIZQ params PARENTESISDER PYC
    (66) procedure -> . PROCEDURE ID PARENTESISIZQ params PARENTESISDER LLAVEIZQ ordenes LLAVEDER PYC
    (67) procedure -> . PROCEDURE MAIN PARENTESISIZQ params PARENTESISDER LLAVEIZQ ordenes LLAVEDER PYC
    (31) sublist -> . ID multi_index
    (32) sublist -> . ID CORCHETEIZQ expression COMA expression CORCHETEDER
    (33) sublist -> . ID CORCHETEIZQ DOSPUNTOS COMA expression CORCHETEDER
    (16) ids -> . ID
    (17) ids -> . ids COMA ids

    TYPE            shift and go to state 16
    ID              shift and go to state 18
    LEN             shift and go to state 19
    PARENTESISIZQ   shift and go to state 17
    INT             shift and go to state 33
    RESTA           shift and go to state 22
    IF              shift and go to state 24
    CALL            shift and go to state 25
    FOR             shift and go to state 26
    BLINK           shift and go to state 27
    DELAY           shift and go to state 28
    PRINTLED        shift and go to state 29
    PRINTLEDX       shift and go to state 30
    PROCEDURE       shift and go to state 31

    statement                      shift and go to state 32
    expression                     shift and go to state 11
    callable                       shift and go to state 12
    var_assign                     shift and go to state 13
    funcionreservada               shift and go to state 14
    procedure                      shift and go to state 15
    sublist                        shift and go to state 20
    ids                            shift and go to state 23

state 2

    (1) statements -> empty .

    TYPE            reduce using rule 1 (statements -> empty .)
    ID              reduce using rule 1 (statements -> empty .)
    LEN             reduce using rule 1 (statements -> empty .)
    PARENTESISIZQ   reduce using rule 1 (statements -> empty .)
    INT             reduce using rule 1 (statements -> empty .)
    RESTA           reduce using rule 1 (statements -> empty .)
    IF              reduce using rule 1 (statements -> empty .)
    CALL            reduce using rule 1 (statements -> empty .)
    FOR             reduce using rule 1 (statements -> empty .)
    BLINK           reduce using rule 1 (statements -> empty .)
    DELAY           reduce using rule 1 (statements -> empty .)
    PRINTLED        reduce using rule 1 (statements -> empty .)
    PRINTLEDX       reduce using rule 1 (statements -> empty .)
    PROCEDURE       reduce using rule 1 (statements -> empty .)
    $end            reduce using rule 1 (statements -> empty .)


state 3

    (2) statements -> print .

    TYPE            reduce using rule 2 (statements -> print .)
    ID              reduce using rule 2 (statements -> print .)
    LEN             reduce using rule 2 (statements -> print .)
    PARENTESISIZQ   reduce using rule 2 (statements -> print .)
    INT             reduce using rule 2 (statements -> print .)
    RESTA           reduce using rule 2 (statements -> print .)
    IF              reduce using rule 2 (statements -> print .)
    CALL            reduce using rule 2 (statements -> print .)
    FOR             reduce using rule 2 (statements -> print .)
    BLINK           reduce using rule 2 (statements -> print .)
    DELAY           reduce using rule 2 (statements -> print .)
    PRINTLED        reduce using rule 2 (statements -> print .)
    PRINTLEDX       reduce using rule 2 (statements -> print .)
    PROCEDURE       reduce using rule 2 (statements -> print .)
    $end            reduce using rule 2 (statements -> print .)


state 4

    (3) statements -> primitive .

    TYPE            reduce using rule 3 (statements -> primitive .)
    ID              reduce using rule 3 (statements -> primitive .)
    LEN             reduce using rule 3 (statements -> primitive .)
    PARENTESISIZQ   reduce using rule 3 (statements -> primitive .)
    INT             reduce using rule 3 (statements -> primitive .)
    RESTA           reduce using rule 3 (statements -> primitive .)
    IF              reduce using rule 3 (statements -> primitive .)
    CALL            reduce using rule 3 (statements -> primitive .)
    FOR             reduce using rule 3 (statements -> primitive .)
    BLINK           reduce using rule 3 (statements -> primitive .)
    DELAY           reduce using rule 3 (statements -> primitive .)
    PRINTLED        reduce using rule 3 (statements -> primitive .)
    PRINTLEDX       reduce using rule 3 (statements -> primitive .)
    PROCEDURE       reduce using rule 3 (statements -> primitive .)
    $end            reduce using rule 3 (statements -> primitive .)


state 5

    (4) statements -> statement .
